--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <div></div>
             <div></div>
         </div>
-        <div id="Taiji-dec">道可道，非常道</div>
+        <div id="Taiji-dec">道可道，非常道。名可名，非常名</div> 
     </div>
 
 </body>
